--- a/flex-grid/css/main.css
+++ b/flex-grid/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #000000;
   height: 100%;
 }
 
@@ -112,7 +112,9 @@ body {
   /*add display:flex and set justify-content to space-between*/
   font-weight: 700;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .div-1, .div-2, .div-3 {
@@ -120,15 +122,27 @@ body {
   color: #fff;
   line-height: 1.5em;
   font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  background-color: black;
+  height: auto;
   display: flex;
   width: 30%;
   justify-content: center;
   align-items: center;
+  padding: 30px;
+  
 }
 
+.div-2{
+    border-left: 5px solid #ffffff;
+}
 
+.div-3{
+    border-left: 5px solid #ffffff;
+}
+
+p{
+    color: #82FF33;
+}
 
 
 /* ==========================================================================
