--- a/rouge_pickings_flex/css/main.css
+++ b/rouge_pickings_flex/css/main.css
@@ -3,13 +3,8 @@
 	src: url('../fonts/wisdom-script.otf') format('opentype');
 }
 
-html{
-	font-size: 16px;
-}
-
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	font-size: 1em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -18,6 +13,10 @@ body {
 .container{
 	max-width: 1200px;
 	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: row wrap;
 }
 
 h1,
@@ -29,20 +28,20 @@ h4 {
 	font-weight: 700;
 }
 h1 {
-	font-size: 1.9em;
+	font-size: 30px;
 }
 h2 {
-    font-size: 1.5em;
+    font-size: 24px;
 }
 h3 {
-	font-size: 1.1em;
+	font-size: 18px;
 }
 h4 {
-	font-size: 0.8em;
+	font-size: 12px;
 }
 
 p {
-	font-size: 0.6em;
+	font-size: 14px;
 	line-height: 21px;
     padding: 0 30px;
 }
@@ -52,6 +51,8 @@ header {
 	height: 110px;
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
+	display: flex;
+
 }
 
 header h1 {
@@ -74,7 +75,7 @@ header nav ul {
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 0.8em;
+	font-size: 14px;
 	padding: 0 10px;
 	display: inline;
 }
@@ -88,6 +89,10 @@ header nav ul li a{
 .bottom-section {
 	margin: 0 auto;
 	clear: both;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: column wrap;
 }
 
 .main-image {
@@ -148,12 +153,12 @@ header nav ul li a{
 
 .reviews {
 	color: #333;
-	font-size: 1em;
+	font-size: 16px;
 	line-height: 21px;
 }
 
 .address {
-	font-size: 1em;
+	font-size: 16px;
 	line-height: 24px;
 }
 
@@ -164,10 +169,13 @@ footer {
 	margin: 0 auto;
 	clear: both;
 	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 footer span {
 	font-family: 'Wisdom Script', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 0.8em;
+	font-size: 14px;
 }
