--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -106,28 +106,61 @@ footer{
     align-items: center;
     flex-flow: row wrap;
 }
+
+/*--Header--*/
+
+header{
+  padding: 15px 0;
+}
+
 header .content-wrapper{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
 }
 
-/*--Header--*/
+.header-divider{
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
+
+}
 
 header nav{
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 
 header nav ul{
   display: flex;
   justify-content: space-around;
+  width: 100%;
+  list-style-type: none;
 }
 
 /*--Footer--*/
+
+footer{
+  flex-direction: column;
+}
+
+footer p{
+  margin: 0;
+}
+
+footer .content-wrapper{
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact{
+  margin-bottom: 50px;
+}
 
 footer .social-icons{
   display: flex;
@@ -139,6 +172,10 @@ footer .social-icons p{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .copyright{
+  margin: 20px 0;
 }
 
 /*--Main--*/
@@ -162,6 +199,15 @@ aside{
   flex-flow: row wrap;
 }
 
+.features h2{
+  margin-bottom: 60px;
+}
+
+.features article{
+  width: 55%;
+  margin: 30px 0;
+}
+
 .features .features-items{
   display: flex;
   justify-content: center;
@@ -173,6 +219,15 @@ aside{
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.reviews h2{
+  margin-bottom: 40px;
+}
+
+.reviews h3{
+  width:55%;
+  margin: 20px 0;
 }
 
 /*--About Page--*/
@@ -191,6 +246,10 @@ aside{
   flex-flow: row wrap;
 }
 
+.contact-content p{
+  margin: 0;
+}
+
 /*--FAQ Page--*/
 
 .faq {
@@ -201,10 +260,19 @@ aside{
 }
 
 .faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.faq h2{
+  margin-bottom: 40px;
+}
+
+.faq-content{
+  margin-bottom: 50px;
 }
 
 
