--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -366,10 +366,131 @@ aside{
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px){
+  /*Tablet styles here*/
+.content-wrapper{
+  max-width: 640px;
+  margin: 100px 0;
 }
+
+header{
+  justify-content: space-around;
+}
+
+header .content-wrapper{
+  width: 100%;
+  justify-content: space-between;
+}
+
+header nav{
+  width: 20%;
+}
+
+header nav ul{
+  justify-content: space-between;
+}
+
+.header-divider{
+  display: none;
+}
+
+/*--Hero Area--*/
+
+aside .content-wrapper{
+  margin: 50px 0;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+}
+
+aside .content-wrapper .from-description,
+aside .content-wrapper .form{
+  width:  35%;
+  margin: 0;
+}
+
+.features article{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  flex-basis: 50%;
+}
+
+.features .features-item-description{
+  width: 50%;
+}
+
+.reviews article div{
+  width: 49%;
+}
+
+/*--Footer--*/
+
+footer .content-wrapper{
+  width: 655%;
+  margin: 100px 0;
+}
+
+.footer-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer .contact{
+  margin-bottom: 0;
+}
+
+footer .copyright{
+  width: 100%;
+}
+
+/*--ABOUT PAGE--*/
+
+.mission-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mission-content p{
+  width: 40%;
+}
+
+.contact-section .content-wrapper h2{
+  width: 80%;
+}
+
+.contact-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+/*--FAQ--*/
+
+.faq .content-wrapper{
+  justify-content: space-between;
+}
+
+.faq-content{
+  flex-basis: 40%;
+}
+
+.faq h2{
+  width: 100%;
+}
+
+
+}
+
+@media only screen and (min-width: 1200px){
+  /*Desktop styles here*/
+  
+}
+
+
 
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
