--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -481,13 +481,60 @@ footer .copyright{
 .faq h2{
   width: 100%;
 }
-
-
 }
 
 @media only screen and (min-width: 1200px){
   /*Desktop styles here*/
-  
+  .content-wrapper{
+    max-width: 960px;
+  }
+
+  .hero-area h1{
+    width: 60%;
+  }
+
+  aside .content-wrapper{
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description, 
+  aside .content-wrapper .form{
+    width: 30%;
+  }
+
+  .features h2{
+    width: 70%;
+  }
+
+  .features article{
+    flex-basis: 33%;
+  }
+
+  .reviews article div{
+    width: 42%;
+  }
+
+  /*--ABOUT --*/
+
+  .mission h2,
+  .contact-section .content-wrapper h2{
+    width: 100%;
+    }
+
+  .contact-section .content-wrapper h2{
+    margin-bottom: 40px;
+  }
+
+  /*--FAQ--*/
+
+  .faq h2{
+    width: 100%;
+  }
+
+  .faq-content{
+    flex-basis: 35%;
+  }
+
 }
 
 
