--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -107,6 +107,7 @@ textarea {
       font-family: 'Open Sans', sans-serif;
       font-size: 1em;
       text-align: left;
+      color: #e2e3ed;
    }
 
    ul, ol{
@@ -121,12 +122,14 @@ textarea {
    h2{
     font-family: 'Open Sans', sans-serif;
     font-size: 1.8em;
+    font-weight: 500;
    }
 
    h3, h4{
     font-family: 'Open Sans', sans-serif;
     margin: 20px 0;
     font-size: 1.1em;
+    font-weight: 500;
    }
 
    p{
@@ -156,6 +159,7 @@ footer{
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #202322;
 }
 
 /*--Header--*/
@@ -176,6 +180,7 @@ header .content-wrapper{
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
+  background: #3a3a3a;
 
 }
 
@@ -185,6 +190,9 @@ header nav{
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
+  font-size: 1.1em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 header nav ul{
@@ -198,6 +206,7 @@ header nav ul{
 
 footer{
   flex-direction: column;
+  text-align: center;
 }
 
 footer p{
@@ -237,11 +246,20 @@ footer .copyright{
   flex-flow: row wrap;
 }
 
+.hero-area h1{
+  font-size: 2.2em;
+}
+
 aside{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
+}
+
+aside .form{
+  margin-top: 30px;
 }
 
 .features{
@@ -266,14 +284,21 @@ aside{
   flex-flow: row wrap;
 }
 
+.features p{
+  text-align: center;
+  margin: 0;
+}
+
 .reviews{
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .reviews h2{
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3{
@@ -288,6 +313,7 @@ aside{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .contact-section{
@@ -295,6 +321,7 @@ aside{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .contact-content p{
@@ -308,6 +335,7 @@ aside{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .faq .content-wrapper {
@@ -320,13 +348,38 @@ aside{
 
 .faq h2{
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content{
   margin-bottom: 50px;
 }
 
-
+.faq-content h4{
+  line-height: 1.3;
+  font-weight: 700;
+}
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
 
 
 /* ==========================================================================
