--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -337,6 +337,22 @@ aside .form{
   background-color: #527158;
 }
 
+.map figure{
+  width: 100%;
+  height: 0;;
+  padding-bottom: 75%;
+  overflow: hidden;
+  position: absolute;
+}
+
+.map iframe{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .contact-section{
   display: flex;
   justify-content: center;
@@ -585,6 +601,10 @@ footer .copyright{
 
 .mission-content p{
   width: 40%;
+}
+
+.map figure{
+  padding-bottom: 45.5%;
 }
 
 .contact-section .content-wrapper h2{
